feat: Refactor IAM commands, enhance JWT handling, and improve email logging